# weewx

./: .editorconfig  .gitignore  .project  .pydevproject  BUILD  CHANGES.txt  CODE_SUMMARY.txt  DEV_NOTES.txt  MANIFEST  MANIFEST.in  NEW_FEATURES.txt  PACKAGING.txt  README  README.md  ROADMAP.md  SKIN_TODO.md  TODO.md  TODO.txt  configure.py  daemon.py  dev_requirements.txt  influxdb-streaming.conf  makefile  merge.conf  merge_config.py  mkdocs.yml  pyproject.toml  readme.htm  requirements.txt  setup.cfg  setup.py  setup2.py  upload.py  wee_import.conf  weewx.conf  weewxd.py  zensical.toml
.github/workflows/: ci.yaml  stale.yaml
adhoc-scripts/: reset_influx.py
debian/: changelog  control  files  pyversions  rules  weewx.substvars
docs/: CHANGES.txt  README.txt  accum.md  apt-get.htm  apt-get.html  changes.md  changes.txt  copyright.htm  copyright.md  customizing.htm  customizing5.md  debian.htm  debian.md  default.html  devnotes.htm  devnotes.md  guides-overview.md  hardware.htm  index.htm  index.html  index.md  installing.htm  linux.htm  logging.md  macos.htm  pip.md  readme.htm  redhat.htm  redhat.md  report_scheduling.md  samaxesjs.toc-1.3.2.js  samaxesjs.toc-1.3.2.min.js  samaxesjs.toc-1.4.js  samaxesjs.toc-1.4.min.js  samaxesjs.toc-1.5.js  samaxesjs.toc-1.5.min.js  series_tags.md  setup.htm  sheeva.htm  sle.html  (+11 more)
docs/css/: bootstrap.css  jquery.tocify.css  weewx_docs.css  weewx_ui.css
docs/custom/: aggregations.md  appendix.md  cheetah.md  custom_reports.md  database.md  derived.md  drivers.md  extensions.md  image_generator.md  index.md  intro.md  localization.md  multiple_bindings.md  options_ref.md  service_engine.md  units.md
docs/examples/: tag.htm
docs/images/: image_parts.xcf
docs/jquery-ui-1.12.1.custom/: jquery-ui.css  jquery-ui.js  jquery-ui.min.css  jquery-ui.min.js  jquery-ui.structure.css  jquery-ui.structure.min.css  jquery-ui.theme.css  jquery-ui.theme.min.css
docs/js/: bootstrap.js  jquery-ui-1.10.4.custom.min.js  jquery.toc-1.1.4.min.js  jquery.tocify-1.9.0.js  jquery.tocify-1.9.0.min.js  weewx.js
docs/quickstarts/: debian.md  index.md  pip.md  redhat.md  suse.md  v5-upgrade.md
docs/userguide/: about-weewx.md  backing-up-weewx.md  installing-weewx.md  mysql-mariadb-config.md  system-requirements.md  webserver-integration.md
docs/usersguide/: about-weewx.md  backing-up-weewx.md  index.md  installing-weewx.md  mysql-mariadb-config.md  running-weewx.md  system-requirements.md  troubleshooting-guide.md  webserver-integration.md  where.md
docs/utilities/: index.md  utilities.htm
docs/weectl/: daemon.md  extension.md  index.md  station.md
docs/weewx-config-file/: data-bindings.md  engine.md  general.md  stations-config.md  stdarchive.md  stdcalibrate-config.md  stdqc-config.md  stdreport-config.md  stdrestful-config.md  stdtimesynch.md  stdwxcalculate-config.md
docs_src/: changes.md  copyright.md  devnotes.md  hardware.htm  index.md  report_scheduling.md  sle.md  upgrade.md  upgrading.htm  versions.md  wee_database.md
docs_src/css/: weewx_docs.css  weewx_ui.css
docs_src/custom/: appendix.md  cheetah-generator.md  cheetah.md  custom-reports.md  database.md  derived.md  drivers.md  extensions.md  image-generator.md  index.md  introduction.md  localization.md  multiple-bindings.md  options_ref.md  report-options.md  report-scheduling.md  report_scheduling.md  service-engine.md  sle.md  units.md
docs_src/hardware/: acurite.md  cc3000.md  drivers.md  fousb.md  gill.md  index.md  te923.md  ultimeter.md  vantage.md  wmr100.md  wmr300.md  wmr9x8.md  ws1.md  ws23xx.md  ws28xx.md
docs_src/quickstarts/: debian.md  git.md  index.md  pip.md  redhat.md  source.md  suse.md  v5-upgrade.md
docs_src/ref/: aggtypes.md  durations.md  units.md  valuetuple.md
docs_src/reference/: aggtypes.md  durations.md  units.md  valuehelper.md  valuetuple.md
docs_src/upgrade/: changes.md  deb.md  pip.md  rpm.md
docs_src/usersguide/: backing-up-weewx.md  backup.md  index.md  installing-weewx.md  installing.md  introduction.md  monitoring.md  mysql-mariadb-config.md  mysql-mariadb.md  running.md  system-requirements.md  uploading.md  webserver.md  where.md
example/: alarm.py
examples/: __init__.py  alarm.py  daily.py  lowBattery.py  lowBatteryPushover.py  mem.py  mygenerator.py  seven_day.py  stats.py  vaporpressure.py
experimental/: astral.py  mem.py  rapidfire.py  test_ip.py  transfer_db.py  vp_resend_bug.py  weeastro.py  weesolar.py  weeview.py
pkg/: README  aptly.conf  changelog.el  changelog.rpm  changelog.suse  index-apt.html  index-suse.html  index-yum.html  mkchangelog.pl  rpmlint.el  rpmlint.suse  weewx-buster.list  weewx-el.repo  weewx-el10.repo  weewx-el7.repo  weewx-el8.repo  weewx-el9.repo  weewx-python2.list  weewx-python3.list  weewx-squeeze.list  weewx-suse.repo  weewx-suse12.repo  weewx-suse15.repo  weewx.smf  weewx.spec.in
public_html/: weewx.css
skins/: skin.conf
src/: wee_import.py  wee_reports.py  weectl.py  weewxd.py
templates/: NOAA_month.tmpl  NOAA_year.tmpl  index.tmpl  month.tmpl  week.tmpl  year.tmpl
trunk/: CHANGES.txt  configure.py  setup.py  weewx.conf  weewxd.py
v1.7reorg/: CHANGES.txt  MANIFEST  NEW_FEATURES.txt  README  weewx.conf
v3/: MANIFEST  weewx.conf
vagrant/: README  Vagrantfile-debian10  Vagrantfile-debian10-dev  Vagrantfile-debian12-dev  Vagrantfile-debian13  Vagrantfile-fedora39  Vagrantfile-fedora39-dev  Vagrantfile-freebsd14  Vagrantfile-freebsd14-dev  Vagrantfile-rocky10  Vagrantfile-rocky8-dev  Vagrantfile-rocky9-dev  Vagrantfile-suse15-dev  Vagrantfile-suse16-dev  Vagrantfile-susetw  Vagrantfile-ubuntu2004  Vagrantfile-ubuntu2204  gpg.conf  rpmmacros
weeplot/: __init__.py  genplot.py  utilities.py
weeutil/: Almanac.py  Moon.py  Sun.py  __init__.py  ftpupload.py  timespan.py  weeutil.py
weewx/: VantagePro.py  __init__.py  archive.py  crc16.py  filegenerator.py  formatter.py  ftpdata.py  genfiles.py  genimages.py  imagegenerator.py  mainloop.py  post.py  processdata.py  reportengine.py  restful.py  station.py  stats.py  units.py  wunderground.py  wxengine.py  wxformulas.py
(+874 files in other folders)
