[tool.poetry]
name = "weewx"
version = "5.0.0a14"
description = "The WeeWX weather software system"
authors = ["Tom Keffer <tkeffer@gmail.com>"]
license = "GPL3"
readme = 'README.md'
repository = "https://github.com/weewx/weewx"
homepage = "https://weewx.com"
documentation = "https://weewx.com/docs"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering :: Physics'
]
packages = [
    { include = "schemas", from = "bin" },
    { include = "wee_resources", from = "bin" },
    { include = "weecfg", from = "bin" },
    { include = "weectllib", from = "bin" },
    { include = "weedb", from = "bin" },
    { include = "weeimport", from = "bin" },
    { include = "weeplot", from = "bin" },
    { include = "weeutil", from = "bin" },
    { include = "weewx", from = "bin" },
    { include = "wee_database.py", from = "bin" },
    { include = "wee_debug.py", from = "bin" },
    { include = "wee_device.py", from = "bin" },
    { include = "wee_import.py", from = "bin" },
    { include = "wee_reports.py", from = "bin" },
    { include = "weectl.py", from = "bin" },
    { include = "weewxd.py", from = "bin" },
    { include = "wunderfixer.py", from = "bin" },
]

# By default, Poetry ignores things in .gitignore. Hence, we need to explicitly include the docs.
include = [
    "LICENSE.txt",
    "README.md",
    "bin/wee_resources/docs/**/*",
]

exclude = [
  'bin/*/tests/*',
  'bin/*/*/tests/*',
]

[tool.poetry.dependencies]
python = "^3.7"
configobj = ">=4.7"
# This is the renamed "Cheetah" package:
CT3 = "^3.1"
Pillow = "^9.3"
pyephem = "^3.7"
PyMySQL = "^1.0"
pyserial = "^3.4"
pyusb = "^1.0.2"
six = "^1"

[tool.poetry.scripts]
wee_database = 'wee_database:main'
wee_debug = 'wee_debug:main'
wee_device = 'wee_device:main'
wee_import = 'wee_import:main'
wee_reports = 'wee_reports:main'
weectl = 'weectl:main'
weewxd = 'weewxd:main'
wunderfixer = 'wunderfixer:main'

[build-system]
# Minimum requirements for the build system to execute.
# requires = ["poetry", "setuptools>=46.0", "wheel", "configobj"]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

